--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,2 @@
-[package]
-name = "pmm"
-version = "0.1.0"
-edition = "2021"
+workspace = { members = ["crates/*"] }
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-serde = {version = "1.0.195", features = ["derive"]}
-toml = "0.8.8"
