--- a/crates/pmm/Cargo.toml
+++ b/crates/pmm/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+directories = "5.0"
+config = { version = "0.14.0"  }
+pm = {path = "../pm"}
 serde = {version = "1.0.195", features = ["derive"]}
 toml = "0.8.8"
 
